--- a/logingpage.css
+++ b/logingpage.css
@@ -38,6 +38,11 @@ body {
     text-align: center;
     font-family:'Times New Roman', Times, serif ;
 }
+.login-box h3{
+    text-align: center ;
+    margin: 0;
+    padding: 0;
+}
 
 .form-group {
     margin-bottom: 15px;
