--- a/webpagestyle.css
+++ b/webpagestyle.css
@@ -1,3 +1,8 @@
+html {
+    scroll-behavior: smooth; 
+}
+
+
 body{
     display: flex;
     flex-direction: column;
@@ -9,15 +14,17 @@ body{
 }
 
 
-.header {/*headern container*/
+.header {
     margin: 0; 
     width: 100%;
     height: 100px;
-    background-color: rgb(255, 255, 255);
+    background-color:#9ea8a2;
     top: 0;
-    position: fixed; /*set position on the top*/
+    position: fixed; 
     display: flex; 
     align-items: center; 
+    border: 3px transparent;
+    box-shadow: 0 0 15px 15px rgb(165, 178, 178);
 }
 
 .header img{
@@ -103,7 +110,7 @@ body{
 
 
 h4{
-    color:rgba(0, 0, 0, 0.17);
+    color:rgba(0, 0, 0, 0.361);
     margin: 0;
     padding: 0;
     font-size: medium;
@@ -136,7 +143,7 @@ p{
     margin-top	: 10px;
     margin-right: 100px;
     margin-left: 100px;
-    margin-bottom: 200px;
+    margin-bottom: 25px;
     
 }
 
@@ -148,6 +155,12 @@ p{
     font-size:larger; 
     
 }
+hr{
+    color: #000000;
+    width: 80%;
+    align-items: center;
+    height: 2px;
+}
 .footer {
     justify-content: center;
     margin-top: auto;
@@ -157,11 +170,14 @@ p{
     height: 100px;
     width: 100%;
     background-color: rgb(140, 222, 240);
+    border: 3px transparent;
+    box-shadow: 0 0 15px 15px rgba(197, 213, 213, 0.7);
 }
 
 
 .contact-us{
     background-color: rgba(205, 203, 200, 0);
+    padding-bottom: 100px;
     display: flex;
     flex-direction: row;
     height: auto;
@@ -169,13 +185,12 @@ p{
 
 }
 .ver{
-    align-content:flex-end  ;
-    justify-content: center;
-    justify-items: center;
-    width: 40%;
-    margin-left: 100px;
     display: flex;
     flex-direction: column; 
+    justify-content:flex-start;
+    width: 40%;
+    margin-left: 100px;
+    align-items:flex-start;
     padding: 10px;
 }
 
@@ -185,6 +200,7 @@ p{
     margin-left: 0;
     font-weight: bold;
     justify-content: left;
+    padding: 0;
 }
  .ver input{
     background-color: white;
@@ -213,6 +229,7 @@ p{
  }
  .ver textarea {
     background-color: white;
+    margin: 10px;
     margin: auto;
     padding: 5px;
     width: 100%;
@@ -229,16 +246,16 @@ p{
  }
 
  .ver button{
+    align-self: center;
     margin: 20px;
     border-radius: 5px;
-    align-items: center;
     width: 60%;
-    background-color: rgb(106, 175, 202);
+    background-color: #6d7470;
     text-transform: uppercase;
     color: #000000;
  }
  .ver button:hover{
-    background-color: blue;
+    background-color:rgba(149, 223, 113, 0.713);
     
  }
 .ver h5{
@@ -249,7 +266,39 @@ p{
 }
 .hor{
     display: flex;
+    width: 100%;
     flex-direction: row;
 }
 
- 
+ .ver p{
+    margin: 10px;
+    padding: 5px;
+    font-weight: bold;
+
+ }
+
+ .ver a{
+    text-decoration: none;
+ }
+
+ .ver a:hover{
+    text-decoration: underline;
+ }
+ .footer {
+    justify-content: center;
+    background-color:#9ea8a2;
+    box-shadow: #5d6360;
+    margin-top: auto; 
+    margin-bottom: 0;
+    width: 100%;
+    height: 50px;  
+    align-items: center; 
+}
+
+.footer p{
+    text-transform: capitalize;
+    margin: 20px;
+    text-align: center;
+    align-content: center;
+
+}
