--- a/webpagestyle.css
+++ b/webpagestyle.css
@@ -17,6 +17,7 @@ body{
 
 .image{
     display: block;
+    border-radius: 15px;
     margin-top: 110px;
     margin-left: auto;
     margin-right: auto;
@@ -216,3 +217,5 @@ hr{
     align-content: flex-start;
 
  }
+
+ 
