--- a/mainstyle.css
+++ b/mainstyle.css
@@ -2,73 +2,51 @@ html {
     scroll-behavior: smooth; 
 }
 
-
-.header {
-    margin: 0; 
-    width: 100%;
-    height: 100px;
+.header, .footer{
     background-color:#9ea8a2;
-    top: 0;
-    position: fixed; 
-    display: flex; 
+    width: 100%;
+    margin: 0; 
     align-items: center; 
     border: 3px transparent;
     box-shadow: 0 0 15px 15px rgb(165, 178, 178);
+    justify-content: center;
+    display: flex;
 }
-
-
-
+.header { 
+    height: 100px;
+    top: 0;
+    position: fixed;        
+}
+.footer {
+    
+    bottom: 0; 
+    height: 30px;   
+}
 .header img{
     display: flex;
     border-radius: 5px;
     margin-left: 20px;
     margin-right: 10px;
 }
-
-
-
-
-
- .logo-image{
+.logo-image{
     height: 75%;
     width: auto;
  }
-
-
-
-
-
-
 .navbar{
     display: flex;
     align-items: center;
     margin-left: auto;
 }
-
-
-
-
-
 .header h3{
     font-family: 'Roboto', sans-serif;
     color: rgb(0, 0, 0);
     text-transform:uppercase ;
 }
-
-
-
-
-
- .name{
+.college-name{
     font-size: 200%;
- }
-
-
-
-
-
-
+}
 .navbar ul {
+    height: 100px;
     justify-items: end;
     justify-content: flex-end;
     display: flex;
@@ -76,48 +54,30 @@ html {
     padding: 5px,0;
     margin-left: auto;
 }
-
-
-
-
-
-
 .navbar ul li {
-    margin: 10px; 
+     margin: 0 10px;
+     height: 100%;
+     display: flex;
+     align-items: center; 
+    
 }
-
-
-
 .navbar ul li a {
+    height: 100%;
+    display: flex;
+    width: fit-content;
+    align-items: center;
     text-decoration: none;
     color: #000000; 
     font-family: 'Roboto', sans-serif;
     font-size: larger; 
     font-weight: bold;
-    padding: 5px 10px; 
-    border-radius: 4px; 
-    
+    padding: 0 15px; 
+    border-radius: 4px;    
 }
-
-
 .navbar ul li a:hover{
-    background-color:rgba(149, 223, 113, 0.713); ;
+    background-color:rgba(149, 223, 113, 0.713); 
+    border-radius: 15px;
 }
-
-.footer {
-    justify-content: center;
-    margin-top: auto;
-    margin-bottom: 0; 
-    position: fixed; 
-    bottom: 0; 
-    height: 30px;
-    width: 100%;
-    background-color:#9ea8a2;
-    border: 3px transparent;
-    box-shadow: 0 0 15px 15px rgba(197, 213, 213, 0.7);
-}
-
-
 .footer p{
     text-transform: capitalize;
     margin: 10px;
