--- a/Student MAnagment Sytem/MainWindow.xaml
+++ b/Student MAnagment Sytem/MainWindow.xaml
@@ -16,11 +16,17 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Infinity Science Academy" 
-                   FontSize="28" FontWeight="Bold" 
-                   HorizontalAlignment="Center" Margin="10"/>
+        <TextBlock Grid.Row="0"
+                   Text="Infinity Science Academy" 
+                   Foreground="White"
+                   FontSize="28" 
+                   FontWeight="Bold" 
+                   HorizontalAlignment="Center" 
+                   Margin="10"/>
 
-        <Grid Grid.Row="1" Margin="10" Background="#F0F0F0" >
+        <Grid Grid.Row="1" 
+              Margin="10"
+              Background="#F0F0F0" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -36,8 +42,10 @@
             <StackPanel Grid.Row="0" 
 						Grid.Column="0"
 						Margin="5">
-                <TextBlock Text="Name:" FontWeight="SemiBold"/>
-                <TextBox x:Name="NameTextBox" Margin="0,2,0,0"/>
+                <TextBlock Text="Name:" 
+                           FontWeight="SemiBold"/>
+                <TextBox x:Name="NameTextBox"
+                         Margin="0,2,0,0"/>
             </StackPanel>
 			
 			
