--- a/Homepagestyle.css
+++ b/Homepagestyle.css
@@ -52,9 +52,14 @@
 }
 
 .navibar a:hover {
-    text-decoration:underline
+    border-radius: 15px;
+    color: #2c3e50;
+    background-color:white;
 }
+.navibar a::after{
+    width: 100%;
 }
+
 table {
     width: 80%;
     border-collapse: collapse;
