--- a/mainstyle.css
+++ b/mainstyle.css
@@ -103,21 +103,40 @@ body {
     display: inline-block;
     margin: 10px;
 }
+.logoutdelogoutdesign :hover{
+    background-color: red;
+}
 
 .navbar ul li a {
     display: inline-block;
     color: white;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: bold;
     padding: 10px 15px;
     border-radius :10px;
     transition: all 0.3s ease;
     position: relative;
 }
+.logout_btn {
+    background-color: #2c3e50;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
 
 .navbar ul li a:hover {
     background-color: rgba(149, 223, 113, 0.713); /* Slight color change on hover */
+}
+
+.logout_btn:hover {
+    background-color: #c0392b;
 }
 
 
@@ -136,3 +155,6 @@ body {
 .navbar ul li a:hover::after {
     width: 100%;
 }
+ .logout_btn:hover::after{
+    width: 100%;
+ }
